@@ -32,12 +32,14 @@ Changelog:
      from subprocess to the GUI process. (Martin [gz], Bug #686735)
  * qcat, qannotate, qdiff, qconfig:
    * Added ability to customise the tab-stop width (setting in qconfig,
-     affects qcat, qannotate and qdiff).  
+     affects qcat, qannotate and qdiff).
      The setting is stored in [DEFAULT] section of bazaar.conf,
      and is named tab_width (it can also be configured with qconfig).  Units
      are characters (so 4 means a tab should be displayed with the width of 4
      spaces).  The default value is 8.  The setting can also be adjusted in
-     branch.conf for specific branches.  (Bug #490377, A. S. Budden)
+     branch.conf for specific branches.  In addition, qdiff and qannotate
+     allow customisation of tab width from the view menu.
+     (Bug #490377, A. S. Budden)
 
 
 0.20.1 - 2011/04/26
